<resources>
    <string name="app_name">SK-Employee-App</string>
    <string name="title_list_fragment">List</string>
    <string name="title_search_fragment">Search</string>
    <string name="title_remove_list_fragment">Add or Remove</string>
    <string name="search_by_name">Search Employee by name</string>
    <string name="detaiil_page">Details</string>
    <string name="attendance_page">Attendance</string>
    <string name="add_page">Add Employee</string>
    <string name="edit_page">Edit Employee</string>
    <string name="name_">Name : </string>
    <string name="id_">Emp Id : </string>
    <string name="address_">Address : </string>
    <string name="age_">Age : </string>
    <string name="phone_">Phone No : </string>
    <string name="email_">Email : </string>
    <string name="password_">Password : </string>
    <string name="desgination_">Desgination : </string>
    <string name="reporting_manager_">Reporting Manager : </string>
    <string name="hr_contact">HR Contact : </string>
    <string name="rating_">Rating : </string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="desgination">Desgination</string>
    <string name="reporting_manager">Reporting Manager</string>
    <string name="contact">HR Contact</string>
    <string name="salary">Salary</string>
    <string name="success">Success!!!</string>
    <string name="something_wrong">Something went wrong. Please try again</string>
    <string name="invalid_info">Please provide valid information</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_employee_confirmation">Do you want to delete this employee?</string>
    <string name="employee_deleted">Employee Deleted!</string>
    <string name="login">Login</string>
    <string name="entry">Entry</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
</resources>
