<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="obj"
            type="com.selva.example_employee_app.model.Employee" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:elevation="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/name_"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:elevation="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@{obj.age}"
                                android:textSize="18sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/id_"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:elevation="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@{Integer.toString(obj.id)}"
                                android:textSize="18sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/age_"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:elevation="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@{obj.age}"
                                android:textSize="18sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/phone_"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:elevation="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@{obj.phone}"
                                android:textSize="18sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/email_"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:elevation="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@{obj.email}"
                                android:textSize="18sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/desgination_"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:elevation="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@{obj.des}"
                                android:textSize="18sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/reporting_manager_"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:elevation="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@{obj.rm}"
                                android:textSize="18sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/hr_contact"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:elevation="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@{obj.hr}"
                                android:textSize="18sp" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</layout>
